skadi#10 multi maven project